# beat_box

./: .clang-format  .clang-tidy  README  platformio.ini
.github/workflows/: style.yml
lib/Adafruit-Protomatter/arch/: arch.h  rp2040.h
lib/Adafruit_Protomatter/src/: core.c
lib/Adafruit_Protomatter/src/arch/: arduino_compat.h  rp2040.h
scripts/: dump.py  format.py  tidy.py  waveform_test.py
src/: CMakeLists.txt  adc_potentiometer.c  adc_potentiometer.h  bpm.c  bpm.h  lcd_main.c  led_matrix.c  led_matrix.h  main.c  matrix_menu.c  pwm_main.c  ui.c  ui.h  vibe_main.c
src/backend_stuff/: bb_backend.c  bb_backend.h
src/lcd/: lcd.c  lcd.h  lcd_setup.c  lcd_setup.h
src/led/: bpm.c  led_matrix.c  led_matrix.h  main.c  ui.c  ui.h
src/potentiometers/: adc_potentiometer.c  adc_potentiometer.h  adc_test.c  test.c
src/wavegen/: mixer.c  mixer.h  presets.c  presets.h  pwm_audio.c  pwm_audio.h  waveform_gen.c  waveform_gen.h
